# fx

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  alerting.py  config.py  deploy.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
crud/: cache.py  fx.py
fx/: forms.py  routes.py
static/css/: style.css
templates/index/: index.jinja  quota.jinja  result.jinja
traefik/: traefik.dev.toml  traefik.prod.toml
views/: routes.py
